--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prisma:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.678.0",
+    "@aws-sdk/s3-request-presigner": "^3.678.0",
     "@prisma/client": "^5.20.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
