feat: fix ai coach integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     restart: unless-stopped
     env_file:
       - .env
+    environment:
+      DATABASE_URL: file:/app/prisma/dev.db
     ports:
       - "3000:3000"
     volumes:
